2019.02.15 Version 10.5.0
* Added uploadFromNonReplayableFlowable to support uploading arbitrary data sources (like network streams) to a block blob.

2019.01.11 Version 10.4.0
* Fixed a bug that caused errors when java.io.tempdir has no trailing separator.
* Upgrade autorest-clientruntime dependency to include some bug fixes.

2018.11.19 Version 10.3.0
* Added support for SLF4J.
* Included default logging to log warnings and errors to the temp directory by default.
* Fixed a bug in hierarchical listings that would sometimes return incomplete results.
* Included the whole HTTP Request in log statements (except for sensitive authorization information, which is redacted).
* Fixed a bug that made the request property on the response object always null.

2018.10.29 Version 10.2.0
* Added overloads which only accept the required parameters.
* Added CopyFromURL, which will do a synchronous server-side copy, meaning the service will not return an HTTP response until it has completed the copy.
* Added support for IProgressReceiver in TransferManager operations. This parameter was previously ignored but is now supported.
* Removed internal dependency on javafx to be compatible with openjdk.
* Fixed a bug that would cause downloading large files with the TransferManager to fail.
* Fixed a bug in BlobURL.download() logic for setting up reliable download. This had the potential to download the wrong range when a download stream was retried.

2018.09.11 Version 10.1.0
* Interfaces for helper types updated to be more consistent throughout the library. All types, with the exception of the options for pipeline factories, use a fluent pattern.
* Removed RetryReader type as it's functionality was moved to be built into the DownloadResponse. RetryReaderOptions are now named ReliableDownloadOptions.
* Restructured the access conditions to be more logically adhere to their respective functions.